Add Python-style signatures, keyword args, defaults, and varargs - Single JVM method per Python function; callsites supply every arg incl. defaults (print(*objects, sep=' ', end='\n', file=None, flush=False) -> print(Object[], String, String, Object, boolean)) - Parser: keyword args (sep='-'), default params (a=1), *args, ordering validation, triple-quoted strings, module/class/docstring no-ops, for loops - Runtime: new builtins abs/min/max/round/sqrt/range/sum/ord/chr; Object[] iteration in for loops - TypeCheck/ConstantFold updated for the new call binding; PrintStmt removed in favor of ExprStmt(CallExpr) - Tests: keyword/print/default/vararg/ctor-default/for/builtin coverage (91 pass)